# RP2040-meteo-station

./: CMakeLists.txt  LICENSE  README.md
drivers/bme280/: bme280.h
drivers/cli/: cli.c  cli.h
drivers/fsys/: file_sys.c  file_sys.h
src/: config.h  main.c
